mono (1.1.12.1-1) unstable; urgency=low

  * Mirco 'meebey' Bauer
    + debian/compat:
       - Changed to 5.
    + debian/mono-classlib-1.0.install:
       - Added usr/lib/mono/compat-1.0/
       - Added usr/lib/pkgconfig/mono-cairo.pc
    + debian/mono-classlib-1.0-dbg.install:
       - Removed usr/lib/mono/gac/Microsoft.VisualBasic/7.0.*/*.mdb
    + debian/mono-classlib-2.0.install:
       - Added usr/lib/mono/compat-2.0/
       - Added usr/lib/mono/gac/FirebirdSql.Data.Firebird/1.7.*/
       - Added usr/lib/mono/gac/Microsoft.Build.*/2.*/
       - Removed usr/lib/mono/gac/Microsoft.VisualBasic/8.0.*/*.mdb
    + debian/mono-classlib-2.0-dbg.install:
       - Added usr/lib/mono/gac/FirebirdSql.Data.Firebird/1.7.*/*.mdb
       - Added usr/lib/mono/gac/Microsoft.Build.*/2.*/*.mdb

 -- Debian Mono Group <pkg-mono-group@lists.alioth.debian.org>  Tue, 27 Dec 2005 12:58:11 +0100

mono (1.1.10-1) unstable; urgency=low

  * New upstream release
  * Mirco 'meebey' Bauer
    + debian/patches/00list:
      - Removed fix_xsp2_inherits, already applied upstream.
      - Removed datetime_doparse_fix, already applied upstream.
      - Removed s390_compile_fix, already applied upstream.
      - Removed 64bit_implicit_pointer_cast_fix, already applied upstream.
    + debian/mono-mcs.manpages:
      - Added mozroots.1
    + debian/mono-classlib-1.0.install:
      - Added dotnet.pc
    + debian/control:
      - Added libgdiplus to "Recommends" of mono. (Closes: #333851)

 -- Debian Mono Group <pkg-mono-group@lists.alioth.debian.org>  Sat, 12 Nov 2005 21:54:15 +0200

mono (1.1.9.2-1) unstable; urgency=low

  * New upstream release
  * Mirco 'meebey' Bauer
    + debian/patches/00list:
      - Removed io_layer_fix_r50689, already applied upstream.
      - Removed amd64_compile_fix_r50553, already applied upstream.
    + debian/mono-utils.install:
      - Removed dh_installxsp, postrm-monoxsp and postinst-monoxsp. Those files
        will be in the XSP package (mono-xsp-base) instead.