@@ -24,6 +24,12 @@ else
 	confflags += --with-tls=pthread
 endif
 
+ifeq ($(DEB_BUILD_ARCH_OS), kfreebsd)
+	GC = --with-gc=boehm
+else
+	GC = --with-gc=included
+endif
+
 # Include dpatch stuff.
 include /usr/share/dpatch/dpatch.make
 
@@ -36,8 +42,9 @@ build-stamp: cli-wrapper
 	./configure $(confflags) --prefix=/usr \
 	  --mandir=\$${prefix}/share/man \
 	  --infodir=\$${prefix}/share/info --sysconfdir=/etc \
-	  --with-sigaltstack=no --with-gc=included \
-	  --with-jit=yes --with-ikvm-native=no --with-preview=yes
+	  --with-sigaltstack=no $(GC) \
+	  --with-jit=yes --with-ikvm-native=no --with-preview=yes \
+	  --with-libgdiplus=installed --with-x=yes
 	$(MAKE)
 	chmod +x debian/dh_makeclilibs debian/dh_clideps
 	touch build-stamp
